@@ -1,3 +1,9 @@
+2001-09-15  Darin Adler  <darin@bentspoon.com>
+
+	* gnome-db2html2/sect-elements.c:
+	* gnome-db2html2/toc-elements.c:
+	Change bugzilla.eazel.com references to point to bugzilla.gnome.org.
+
 2001-08-26  Darin Adler  <darin@bentspoon.com>
 
 	* gnome-db2html2/Makefile.am:
